--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "short-unique-id": "^5.3.2"
   }
 }
