--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.52.0",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0"
   }
 }
